# sfs2x-py

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: decode_packet.py  mitm_proxy.py
src/sfs2x/: __init__.py  crypto.py  objects.py  protocol.py
tests/: test_crypto.py  test_objects.py  test_protocol.py
